--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,14 @@ main, .home {
   background-color: #0064cf;
 }
 
+.btn.table {
+	width: auto;
+}
+
+.btn.back {
+	margin-top: 2rem;
+}
+
 .btn-submit {
   display: flex;
   flex-direction: row;
