--- a/frontend/src/components/FileView/FileView.css
+++ b/frontend/src/components/FileView/FileView.css
@@ -20,9 +20,9 @@
   text-align: center;
 }
 
-.file__table td button {
+/* .file__table td button {
   width: 8rem;
-}
+} */
 
 .file__table td label {
   width: 10rem;
@@ -34,4 +34,51 @@
 
 .btn.delete:hover {
   background-color: rgb(197, 2, 2);
+}
+
+/* .file__field {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.1rem;
+} */
+
+/* Для маленьких экранов */
+@media (max-width: 900px) {
+  .file__table td, .file__table th {
+    padding: 0.2rem;
+  }
+
+  main {
+    padding: 2rem;
+  }
+
+  textarea {
+    width: 6rem;
+  }
+
+  .file__table {
+    display: flex;
+    justify-content: center;
+  }
+
+  
+}
+
+@media (max-width: 500px) {
+  main {
+    padding: 0;
+  }
+
+  .btn {
+    width: 6rem;
+  }
+}
+
+
+@media (min-width: 501px) {
+  .btn {
+    width: 8rem;
+  }
 }
