--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -1,7 +1,3 @@
-.profile__change {
-  margin-top: 1rem;
-}
-
 .profile, .data__files {
   padding: 1rem;
   display: flex;
@@ -14,6 +10,7 @@
 }
 
 .profile__top {
+  padding: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -22,8 +19,8 @@
 }
 
 .profile img {
-  width: 10rem;
-  height: 10rem;
+  max-width: 10rem;
+  max-height: 10rem;
 }
 
 .user__field {
@@ -34,7 +31,7 @@
 }
 
 .btn.cancel {
-  position: absolute;
+  /* position: absolute; */
   right: 1rem;
   background-color: red;
 }
@@ -47,17 +44,7 @@
   background-color: rgb(212, 0, 0);
 }
 
-.user__field li {
-  display: grid;
-  grid-template-columns: repeat(3, 10rem);
-  gap: 1rem;
-}
 
-.avatar {
-  display: grid;
-  grid-template-columns: 6rem 16rem 10rem;
-  text-align: left;
-}
 
 strong {
   width: 6rem;
@@ -87,3 +74,105 @@ h4 {
 .data__files {
   flex-direction: column;
 }
+
+.avatar-input {
+  display: none;
+}
+
+label.btn {
+  font-weight: lighter;
+  padding: 0.1rem 0;
+  text-align: center;
+}
+
+.avatar__redactor {
+  gap: 1rem;
+}
+
+
+
+@media (max-width: 900px) {
+  .avatar__redactor, .profile__top, .profile, .avatar, .user__field li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .avatar__redactor .file-info {
+    border: none;
+  }
+
+  .avatar {
+    gap: 1rem;
+  }
+
+  .add__files, .add__files label {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .redact, .user__field li {
+    display: flex;
+    gap: 0.4rem;
+  }
+}
+
+@media (min-width: 901px) and (max-width: 1000px) {
+  .user__field li.redact {
+    grid-template-columns: 10rem 10rem 8rem 8rem;
+  }
+
+  .profile img {
+    max-width: 8rem;
+    max-height: 8rem;
+  }
+
+  .avatar__redactor {
+    grid-template-columns: 10rem 10rem 8rem 8rem;
+  }
+}
+
+@media (min-width: 1001px) {
+  .user__field li.redact {
+    grid-template-columns: repeat(4, 10rem);
+  }
+
+  .avatar__redactor {
+    grid-template-columns: repeat(4, 10rem);
+  }
+
+  
+}
+
+@media (min-width: 901px) {
+  .user__field li {
+    display: grid;
+    grid-template-columns: repeat(3, 10rem);
+    gap: 1rem;
+  }
+
+  .profile__change {
+    margin-top: 1rem;
+  }
+
+  .avatar {
+    display: flex;
+    flex-direction: row;
+    gap: 16rem;
+  }
+
+  .avatar, .avatar__redactor strong {
+    text-align: left;
+  }
+
+  .avatar__redactor {
+    display: grid;
+    gap: 1rem;
+    align-items: center;
+  }
+}
+
+
