--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,10 @@ header {
   text-align: center;
 }
 
+.home {
+  align-items: center;
+}
+
 main, .home {
   gap: 1rem;
 }
@@ -28,12 +32,21 @@ main, .home {
   background-color: #0064cf;
 }
 
+.btn.cancel {
+  background-color: red;
+}
+
 .btn.table {
 	width: auto;
 }
 
 .btn.back {
-	margin-top: 2rem;
+	margin: 2rem;
+}
+
+.btn__block {
+  display: flex;
+  gap: 1rem;
 }
 
 .btn-submit {
@@ -47,6 +60,17 @@ main, .home {
   flex-direction: row;
   justify-content: center;
   gap: 3rem;
+  margin-bottom: 2rem;
+}
+
+.btn__switch {
+  border: none;
+  background-color: white;
+  color: #0064cf;
+}
+
+.home p {
+  margin-top: 2rem;
 }
 
 .form {
@@ -58,6 +82,11 @@ main, .home {
   text-align: left;
   width: 20rem;
   gap: 0.5rem;
+}
+
+.login {
+  justify-content: center;
+  align-items: center;
 }
 
 .inp {
@@ -89,5 +118,13 @@ td .checkbox, button {
 
 .file-view:hover {
   color: rgb(128, 128, 128);
+}
+
+.error {
+  border: 1px solid;
+  background-color: grey;
+  width: 12rem;
+  margin: auto;
+  margin-top: 0.5rem;
 }
 
